# cp-base

./: .clang-format  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  conanfile.py  conanfile.txt  graph_theory.cpp  mkl.cpp  mkl.h  test_mkl.cpp
include/: bin_search.h  cp_base.h  graph_theory.h  mkl.h  number_theory.h  vps.h
src/: bin_search.cpp  cp_base.cpp  graph_theory.cpp  mkl.cpp  number_theory.cpp  vps.cpp
test/: test.cpp  test_mkl.cpp
